--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/portfolio-profissional.png" />
+  <!--
+    <a href="https://www.flaticon.com/br/icones-gratis/carteira" title="carteira ícones">Carteira ícones criados por Flat Icons - Flaticon</a>
+  -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
