--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/portfolio-profissional.png" />
-  <!--
-    <a href="https://www.flaticon.com/br/icones-gratis/carteira" title="carteira ícones">Carteira ícones criados por Flat Icons - Flaticon</a>
-  -->
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -31,7 +28,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
 
-  <title>Severino Carvalho</title>
+  <title>Portfolio</title>
 </head>
 
 <body>
